# named_pipes_example

./: .gitignore  CMakeLists.txt  README.md
SBAPPClient/: SBAPPClient.cpp  stdafx.cpp  stdafx.h
SBAPPLib/: SBAPPLib.cpp  SBAPPLib.h  SBAPPpipedClass.h  Stdafx.cpp  Stdafx.h  someTestClass.cpp  someTestClass.h
SBAPPServer/: SBAPPMultiThreadServer.cpp  SBAPPOverlappedServer.cpp  SBAPPServer.cpp  stdafx.cpp
